Ticket: #FT-500 SubTicket: # Component: Changes: 1. Fix a bug that inline validation is too long. 2. Add tooltip to inline validation.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
@@ -709,6 +709,31 @@ body .document-dataentry.page-level-message-container {
 	}
 }
 
+.setting-configuration .form-group.has-error {
+	margin-bottom: 5px;
+	height: 57px;
+}
+
+.dataentry-container .form-group.has-error {
+	margin-bottom: 5px;
+	height: 55px;
+
+	&.textarea {
+		height: 112px;
+	}
+
+	&.large-textarea {
+		height: 215px;
+	}
+
+	.help-block {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		height: auto;
+	}
+}
+
 .list-mover-for-list-filter-with-select-date-time-range {
 	.form-group.has-error {
 		margin-bottom: 0;
